--- a/toc.yaml
+++ b/toc.yaml
@@ -373,6 +373,9 @@ paths:
   /events/v2/{bucket}/booking/{uid}/tickets/all:
     $ref: 'requests/Events.yaml#/EventTicketsAll'
 
+  /events/v2/{bucket}/{resource_type}/{uid}/order/{euid}:
+    $ref: 'requests/Events.yaml#/EventOrderSingle'
+
   #
   # Internal
   #
