--- a/toc.yaml
+++ b/toc.yaml
@@ -352,6 +352,9 @@ paths:
   /events/v2/{bucket}/booking/{uid}:
     $ref: 'requests/Events.yaml#/EventSingle'
 
+  /events/v2/{bucket}/booking/{uid}/rebase:
+    $ref: 'requests/Events.yaml#/EventSingleRebase'
+
   /events/v2/{bucket}/booking/{uid}/summary:
     $ref: 'requests/Events.yaml#/EventSingleSummary'
 
