--- a/requests/Events.yaml
+++ b/requests/Events.yaml
@@ -478,6 +478,40 @@ EventOrdersExport:
     responses:
       $ref: 'shared.yaml#/responses/standard_xlsx'
 
+EventOrdersExportMeta:
+  get:
+    operationId: getEventOrdersExportMeta
+    summary: Event - Meta data for the Orders Export
+    description: |
+      The meta data used to generate the export, useful for debugging a report
+    tags:
+      - Events
+      - Export
+    parameters:
+      - name: bucket
+        in: path
+        required: true
+        schema:
+          $ref: 'shared.yaml#/schemas/bucket'
+      - name: uid
+        in: path
+        required: true
+        description: "The resource UID, usually a person UID"
+        schema:
+          $ref: 'shared.yaml#/schemas/uid'
+      - name: fieldset
+        in: query
+        required: false
+        description: "The fieldsets (lists of fields) to be returned in the export"
+        schema:
+          type: array
+          items:
+            type: string
+            enum: ["core", "communications", "emergency", "membership", "profile", "mailing"]
+            default: "core"
+    responses:
+      $ref: 'shared.yaml#/responses/standard'
+
 EventTicketsAll:
   get:
     operationId: getEventTicketsAll
