--- a/toc.yaml
+++ b/toc.yaml
@@ -495,7 +495,7 @@ paths:
   #
   # Self Service / App API - PDFs
   #
-  /selfservice-pdf/v2/{bucket}/form_response:
+  /selfservice/v2/{bucket}/form_response:
     $ref: 'requests/Selfservice.yaml#/FormResponse'
 
   /selfservice-pdf/v2/{bucket}/{resource_type}/{uid}/invoice/{signature}/pdf:
