--- a/requests/Segments.yaml
+++ b/requests/Segments.yaml
@@ -148,7 +148,7 @@ Segments:
             $ref: 'shared.yaml#/schemas/uri'
       - name: resource_type
         in: query
-        required: false
+        required: true
         schema:
           type: string
           enum:
