Document warehouse build       action:         type: string       data_type:         type: string       function_name:         type: string       params:         type: object         description: |           The parameters to pass to the lambda function which will execute your request         properties:           bucket:             type: string           lambda_prefix:             type: string           safe_mode:             type: boolean           since_hours:             type: integer             description: The number of hours to look back for changes       partner:         type: string       status:         type: string         description: OK if the request was successful

--- a/requests/Internal.yaml
+++ b/requests/Internal.yaml
@@ -271,6 +271,68 @@ MembershipTypeExtrasCondition:
     responses:
       $ref: 'shared.yaml#/responses/standard'
 
+WarehouseBuild:
+  post:
+    operationId: warehouseBuild
+    summary: Request a warehouse build
+    description: |
+      Request a warehouse build
+    tags:
+      - Internal
+      - Partners
+    parameters:
+      - name: bucket
+        in: path
+        required: true
+        schema:
+          $ref: 'shared.yaml#/schemas/bucket'
+      - name: facet
+        in: path
+        required: true
+        description: The facet to build e.g. contact, membership
+        schema:
+          type: string
+          enum:
+            - attendance
+            - contact
+            - contact_large
+            - fundraising
+            - membership
+      - name: force
+        in: query
+        required: false
+        schema:
+          type: boolean
+          description: |
+            If force is false the build will only run if the there are relevant changes since the last build.
+          default: false
+      - name: safe_mode
+        in: query
+        required: false
+        schema:
+          type: boolean
+          description: |
+            If safe_mode is true, the build will be executed in a read only way.
+          default: false
+    responses:
+      '200':
+        description: |
+          Details of the request.
+          The output from the requested sync will appear in the usage reports with a summary of the results.
+        content:
+          application/json:
+            schema:
+              $ref: '#/responses/WarehouseBuild'
+      '400':
+        description: Bad request, see the error field for details
+      '401':
+        description: Unauthorized is the status code to return when the client provides no credentials or invalid credentials.
+      '403':
+        description: Forbidden is the status code to return when a client has valid credentials but not enough privileges to perform an action on a resource.
+      '404':
+        description: Not found
+      '500':
+        description: An error occurred within sheepCRM, please report to support@sheepcrm.com
 
 
 #
@@ -302,6 +364,27 @@ responses:
             description: The number of hours to look back for changes
       partner:
         type: string
+      status:
+        type: string
+        description: OK if the request was successful
+
+  WarehouseBuild:
+    properties:
+      function_name:
+        type: string
+      message:
+        type: string
+      params:
+        type: object
+        description: |
+          The parameters to pass to the lambda function which will execute your request
+        properties:
+          bucket:
+            type: string
+          force:
+            type: boolean
+          safe_mode:
+            type: boolean
       status:
         type: string
         description: OK if the request was successful
