--- a/toc.yaml
+++ b/toc.yaml
@@ -306,6 +306,9 @@ paths:
   /events/v2/{bucket}/booking/{uid}/attendance/all:
     $ref: 'requests/Events.yaml#/EventAttendanceAll'
 
+  /events/v2/{bucket}/booking/{uid}/attendance/export:
+    $ref: 'requests/Events.yaml#/EventAttendanceExport'
+
   /events/v2/{bucket}/booking/{uid}/available_tickets:
     $ref: 'requests/Events.yaml#/EventAvailableTickets'
 
